--- a/squid.conf
+++ b/squid.conf
@@ -1,66 +1,34 @@
-acl localnet src 10.0.0.0/8 # RFC1918 possible internal network
-acl localnet src 172.16.0.0/12 # RFC1918 possible internal network
-acl localnet src 192.168.0.0/16 # RFC1918 possible internal network
-acl localnet src fc00::/7 # RFC 4193 local private network range
-acl localnet src fe80::/10 # RFC 4291 link-local (directly plugged) machines
-acl lan src 192.168.69.0/24 #IP LAN 
-acl SSL_ports port 443
-acl Safe_ports port 80 # http
-acl Safe_ports port 21 # ftp
-acl Safe_ports port 443 # https
-acl Safe_ports port 70 # gopher
-acl Safe_ports port 210 # wais
-acl Safe_ports port 1025-65535 # unregistered ports
-acl Safe_ports port 280 # http-mgmt
-acl Safe_ports port 488 # gss-http
+#some secret code
 acl Safe_ports port 591 # filemaker
 acl Safe_ports port 777 # multiling http
 acl CONNECT method CONNECT
 acl SSL method CONNECT
 #acl blokir2 url_regex "/etc/squid3/porn2.txt"
 acl blokir dstdomain "/etc/squid3/x.txt"
-acl toblock dstdomain .xvideos.com
+
  
 http_access deny !Safe_ports
-http_access deny CONNECT !SSL_ports
-http_access allow localhost manager
-http_access deny manager
-http_access allow localnet
-#http_access allow localhost
-http_access allow lan
-http_access deny all
-#http_access allow all
-http_access deny blokir
-#http_access deny blokir2
-http_access deny toblock
-#http_access deny blokir-radikal
-#http_access deny blokir-judi
+#some secret code
 http_port 3128
-#deny_info http://192.168.0.125/proxy.html blokir 
+
 
 cache_dir aufs /cache/cache 100000 100 256
  
 refresh_pattern ^ftp: 1440 20% 10080
 refresh_pattern ^gopher: 1440 0% 1440
-refresh_pattern -i (/cgi-bin/|\?) 0 0% 0
-refresh_pattern . 0 20% 4320
-refresh_pattern ^ftp: 1440 20% 10080
+#some secret code
 
 refresh_pattern ^gopher: 1440 0% 1440
 
 refresh_pattern ^http: 720 90% 432000
+#some secret code
 
 refresh_pattern -i \.(gif|png|jpg|jpeg|ico)$ 10080 90% 43200 override-expire ignore-no-cache ignore-private
 
 refresh_pattern -i \.(iso|avi|wav|mp3|mp4|mpeg|mpg|swf|flv|x-flv)$ 43200 90% 432000 override-expire ignore-no-cache ignore-private
 
-refresh_pattern -i \.(deb|rpm|exe|ram|bin|pdf|ppt|doc|tiff)$ 10080 90% 43200 override-expire ignore-no-cache ignore-private
 
-refresh_pattern -i \.(zip|gz|arj|lha|lzh|tar|tgz|cab|rar)$ 10080 95% 43200 override-expire ignore-no-cache ignore-private
-
-refresh_pattern -i \.(php|asp|aspx|cgi|html|htm|css|js) 1440 40% 40320
 
 
 refresh_pattern ^.*safebrowsing.*google                                  129600 100% 129600 override-expire ignore-reload ignore-no-cache ignore-private ignore-auth ignore-must-revalidate
-
-
+#some secret code
